# agentic-liquidity-router

./: .env.example  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: demo.rs
frontend/: next.config.js  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/route/: route.ts
frontend/src/components/: AgentReasoning.tsx  PaymentForm.tsx  RouteComparison.tsx  RouteVisualization.tsx
frontend/src/types/: index.ts
src/: agent.rs  main.rs  rates.rs  types.rs
