[package]
name = "agentic-liquidity-router"
version = "0.1.0"
edition = "2021"
description = "AI agent for optimal cross-border payment routing across African rails and onchain liquidity"
license = "Apache-2.0"
authors = ["Charles Mfouapon"]

[dependencies]
# AI agent framework
rig-core = "0.4"

# HTTP client for rate APIs
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Graph algorithms for route finding
petgraph = "0.6"

# Decimal precision for financial math
rust_decimal = "1"
rust_decimal_macros = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Rate limiting
governor = "0.6"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[[bin]]
name = "agentic-liquidity-router"
path = "src/main.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"
